--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           Get ready to Quiz and be amazed!
         </p>
       </div>
-      <button class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white">
+      <button id="blog-btn" class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white">
         Blog
       </button>
     </nav>
@@ -167,6 +167,13 @@
     Copyright © 2023 Quiz Hero All Rights Reserved.
   </footer>
   <!-- Footer section end -->
+
+  <!-- JS here -->
+  <script>
+    document.getElementById('blog-btn').addEventListener('click', function(){
+      window.location.href = 'blog.html';
+    })
+  </script>
 </body>
 
 </html>
