all questions are answered

--- a/blog.html
+++ b/blog.html
@@ -33,58 +33,23 @@
         <h1 class="body-title">Some Questions & Answers</h1>
         <div class="container">
             <h1>What is the difference between map, filter, forEach and find?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse debitis cupiditate dolorem molestiae,
-                dolores a quasi tempore. Aut maxime voluptates eius, voluptatem, voluptatum fuga praesentium animi et,
-                nostrum neque ipsum totam? Alias facere optio soluta numquam magnam, molestiae architecto odit animi
-                blanditiis explicabo, mollitia nesciunt ad magni sunt culpa quae voluptatibus. Nisi soluta
-                necessitatibus distinctio repellendus sed saepe aliquid dolorum tenetur, atque eaque voluptatibus
-                accusamus inventore quos architecto nostrum debitis voluptatum sequi ipsa quod minima facere. Aliquam
-                sint quod dignissimos maxime earum fugit totam autem quam quae cum soluta at tempore, reprehenderit
-                ipsum expedita? Deserunt beatae labore laboriosam ducimus neque!</p>
+            <p>Map executes the code in an array and returns a new array with updated elements. Filter executes the code in an array and see if any elements maintain the criteria and then return a new array with the the elements that return truthy. For Each executes the code in an array but it doesn't return an array, it returns undefined. And find executes the code in an array and find the elements and find any element and returns it.</p>
         </div>
         <div class="container">
             <h1>What is the difference between Local Storage, Session Storage and Cookies?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse debitis cupiditate dolorem molestiae,
-                dolores a quasi tempore. Aut maxime voluptates eius, voluptatem, voluptatum fuga praesentium animi et,
-                nostrum neque ipsum totam? Alias facere optio soluta numquam magnam, molestiae architecto odit animi
-                blanditiis explicabo, mollitia nesciunt ad magni sunt culpa quae voluptatibus. Nisi soluta
-                necessitatibus distinctio repellendus sed saepe aliquid dolorum tenetur, atque eaque voluptatibus
-                accusamus inventore quos architecto nostrum debitis voluptatum sequi ipsa quod minima facere. Aliquam
-                sint quod dignissimos maxime earum fugit totam autem quam quae cum soluta at tempore, reprehenderit
-                ipsum expedita? Deserunt beatae labore laboriosam ducimus neque!</p>
+            <p>Local storage records the data in a web browser and show the data when visitor visits the same page later. Session storage recods the data only for a shot amount of time. If anyone close the tab or the borswer it will reset itself. And cookies are a good choice for storing data that should not be persisted for a long time such as login id.</p>
         </div>
         <div class="container">
             <h1>What is Event Loop and how does it works?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse debitis cupiditate dolorem molestiae,
-                dolores a quasi tempore. Aut maxime voluptates eius, voluptatem, voluptatum fuga praesentium animi et,
-                nostrum neque ipsum totam? Alias facere optio soluta numquam magnam, molestiae architecto odit animi
-                blanditiis explicabo, mollitia nesciunt ad magni sunt culpa quae voluptatibus. Nisi soluta
-                necessitatibus distinctio repellendus sed saepe aliquid dolorum tenetur, atque eaque voluptatibus
-                accusamus inventore quos architecto nostrum debitis voluptatum sequi ipsa quod minima facere. Aliquam
-                sint quod dignissimos maxime earum fugit totam autem quam quae cum soluta at tempore, reprehenderit
-                ipsum expedita? Deserunt beatae labore laboriosam ducimus neque!</p>
+            <p>The Event Loop in JavaScript monitors the Call Stack and the Callback Queue. If the Call Stack is empty, the Event Loop will take the first event from the queue and will push it to the Call Stack, which effectively runs it. And if the call stack is full then it stores the event in queue to execute serially.</p>
         </div>
         <div class="container">
             <h1>How does quizTimer function works in noChange.js file?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse debitis cupiditate dolorem molestiae,
-                dolores a quasi tempore. Aut maxime voluptates eius, voluptatem, voluptatum fuga praesentium animi et,
-                nostrum neque ipsum totam? Alias facere optio soluta numquam magnam, molestiae architecto odit animi
-                blanditiis explicabo, mollitia nesciunt ad magni sunt culpa quae voluptatibus. Nisi soluta
-                necessitatibus distinctio repellendus sed saepe aliquid dolorum tenetur, atque eaque voluptatibus
-                accusamus inventore quos architecto nostrum debitis voluptatum sequi ipsa quod minima facere. Aliquam
-                sint quod dignissimos maxime earum fugit totam autem quam quae cum soluta at tempore, reprehenderit
-                ipsum expedita? Deserunt beatae labore laboriosam ducimus neque!</p>
+            <p>Timer in noChange.js file is setting an interval of 1000 milisecond or 1 second and dividing it by count and when the count is greater than 60, quizTimer function dismissing the quiz and clearing the interval of timer.</p>
         </div>
         <div class="container">
             <h1>How does chooseQuiz function works in noChange.js file?</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse debitis cupiditate dolorem molestiae,
-                dolores a quasi tempore. Aut maxime voluptates eius, voluptatem, voluptatum fuga praesentium animi et,
-                nostrum neque ipsum totam? Alias facere optio soluta numquam magnam, molestiae architecto odit animi
-                blanditiis explicabo, mollitia nesciunt ad magni sunt culpa quae voluptatibus. Nisi soluta
-                necessitatibus distinctio repellendus sed saepe aliquid dolorum tenetur, atque eaque voluptatibus
-                accusamus inventore quos architecto nostrum debitis voluptatum sequi ipsa quod minima facere. Aliquam
-                sint quod dignissimos maxime earum fugit totam autem quam quae cum soluta at tempore, reprehenderit
-                ipsum expedita? Deserunt beatae labore laboriosam ducimus neque!</p>
+            <p>chooseQuiz is an arrow function. Inside this function, it is checking the answer from the users and storing the answers in an array and increasing the count of serial. And then, displaying the answer.</p>
         </div>
     </section>
 
